--- a/index.html
+++ b/index.html
@@ -646,6 +646,32 @@
                                             <div class="list_inner">
                                                 <div class="image">
                                                     <img src="img/thumbs/31-36.jpg" alt />
+                                                    <div class="main" data-img-url="img/portfolio/1.jpg"></div>
+                                                    <a class="elisc_tm_full_link popup-youtube" href="https://www.youtube.com/watch?v=7e90gBu4pas"></a>
+                                                </div>
+                                                <div class="details">
+                                                    <span class="category"><a href="#">Youtube</a></span>
+                                                    <h3 class="title"><a class="line_effect popup-youtube" href="https://www.youtube.com/watch?v=7e90gBu4pas">New Technology</a></h3>
+                                                </div>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="list_inner">
+                                                <div class="image">
+                                                    <img src="img/thumbs/31-36.jpg" alt />
+                                                    <div class="main" data-img-url="img/portfolio/2.jpg"></div>
+                                                    <a class="elisc_tm_full_link popup-vimeo" href="https://vimeo.com/337293658"></a>
+                                                </div>
+                                                <div class="details">
+                                                    <span class="category"><a href="#">Vimeo</a></span>
+                                                    <h3 class="title"><a class="line_effect popup-vimeo" href="https://vimeo.com/337293658">Firogo Majestic Ltd.</a></h3>
+                                                </div>
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <div class="list_inner">
+                                                <div class="image">
+                                                    <img src="img/thumbs/31-36.jpg" alt />
                                                     <div class="main" data-img-url="img/portfolio/4.jpg"></div>
                                                     <a class="elisc_tm_full_link portfolio_popup" href="#"></a>
                                                 </div>
