--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                             <ul class="anchor_nav">
                                 <li class="current"><a href="#home">Home</a></li>
                                 <li><a href="#about">About</a></li>
-                                <li><a href="#service">Services</a></li>
+                                <li><a href="#service">Experience</a></li>
                                 <li><a href="#portfolio">Portfolio</a></li>
                                 <li><a href="#contact">Contact</a></li>
                             </ul>
@@ -98,7 +98,7 @@
                         <ul class="anchor_nav">
                             <li class="current"><a href="#home">Home</a></li>
                             <li><a href="#about">About</a></li>
-                            <li><a href="#service">Services</a></li>
+                            <li><a href="#service">Experience</a></li>
                             <li><a href="#portfolio">Portfolio</a></li>
                             <li><a href="#contact">Contact</a></li>
                         </ul>
@@ -396,9 +396,9 @@
                                         <span>- Experience</span>
                                         <h3>My Experience</h3>
                                     </div>
-                                    <a href="/cdn-cgi/l/email-protection#7e0d0b0e0e110c0a3e1b12170d1d501d1113"><span
-                                            class="__cf_email__"
-                                            data-cfemail="0f7c7a7f7f607d7b4f6a63667c6c216c6062">[email&#160;protected]</span></a>
+                                    <a href="mailto: kavithasmurugesan7989@gmail.com"><span
+                                        class="__cf_email__"
+                                        data-cfemail="d0a3a5a0a0bfa2a490b5bcb9a3b3feb3bfbd">kavithasmurugesan7989@gmail.com</span></a>
                                 </div>
                                 <div class="service_list">
                                     <ul>
@@ -411,7 +411,9 @@
                                                         <h3>Vice Principal, Professor and Head</h3>
                                                     </div>
                                                     <div class="text">
-                                                        <p>Web development is the process of building, programming...
+                                                        <p>Currently working as Vice Principal, Professor and Head in the Department of
+                                                            CSE - Vedavyasa Institute of Technology Malappuram Dist., Kerala, from June
+                                                            2005.
                                                         </p>
                                                     </div>
                                                     <div class="elisc_tm_read_more">
@@ -429,10 +431,11 @@
                                                 <div class="details">
                                                     <div class="title">
                                                         <span>02</span>
-                                                        <h3>UI/UX Design</h3>
+                                                        <h3>Faculty and Senior Programmer (1.5 Years)</h3>
                                                     </div>
                                                     <div class="text">
-                                                        <p>Web development is the process of building, programming...
+                                                        <p>Worked as a Faculty and Senior Programmer at ECIL-BDPS, Trichy, Tamil
+                                                            Nadu from Oct’2003–Mar’2005
                                                         </p>
                                                     </div>
                                                     <div class="elisc_tm_read_more">
@@ -450,10 +453,12 @@
                                                 <div class="details">
                                                     <div class="title">
                                                         <span>03</span>
-                                                        <h3>Mobile Application</h3>
+                                                        <h3>Developer (3 Years)
+                                                        </h3>
                                                     </div>
                                                     <div class="text">
-                                                        <p>Web development is the process of building, programming...
+                                                        <p>Worked as Developer at Raghav Infotech, KilPauk Gardens, Chennai from
+                                                            June’2000 – May’2003.
                                                         </p>
                                                     </div>
                                                     <div class="elisc_tm_read_more">
@@ -468,7 +473,7 @@
                                        
                                     </ul>
                                 </div>
-                                <div class="elisc_tm_video">
+                                <!-- <div class="elisc_tm_video">
                                     <img class="placeholder" src="img/thumbs/4-2.jpg" alt />
                                     <div class="image" data-img-url="img/service/1.jpg"></div>
                                     <div class="overlay"></div>
@@ -478,7 +483,7 @@
                                     </div>
                                     <a class="elisc_tm_full_link popup-youtube"
                                         href="https://www.youtube.com/watch?v=7e90gBu4pas"></a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
