--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 
             <div class="elisc_tm_topbar">
                 <div class="topbar_inner">
-                    <div class="logo" data-type="image">
+                    <!-- <div class="logo" data-type="image">
                         <a class="image" href="#"><img src="img/logo/logo.png" alt /></a>
                         <a class="text" href="#"><span>Dr. S Kavitha</span></a>
-                    </div>
+                    </div> -->
                     <div class="trigger">
                         <div class="hamburger hamburger--slider">
                             <div class="hamburger-box">
