--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                                 <li><a href="#contact">Contact</a></li>
                             </ul>
                         </div>
-                        <div class="social">
+                        <!-- <div class="social">
                             <ul>
                                 <li><a href="#"><img class="svg" src="img/svg/social/facebook.svg" alt /></a></li>
                                 <li><a href="#"><img class="svg" src="img/svg/social/twitter.svg" alt /></a></li>
@@ -75,7 +75,7 @@
                                 <li><a href="#"><img class="svg" src="img/svg/social/dribbble.svg" alt /></a></li>
                                 <li><a href="#"><img class="svg" src="img/svg/social/tik-tok.svg" alt /></a></li>
                             </ul>
-                        </div>
+                        </div> -->
                         <div class="copyright">
                             <p>Copyright &copy; 2023</p>
                         </div>
@@ -108,13 +108,13 @@
                         </ul>
                     </div>
                     <div class="copyright">
-                        <div class="social">
+                        <!-- <div class="social">
                             <ul>
                                 <li><a href="#"><i class="icon-facebook-1"></i></a></li>
                                 <li><a href="#"><i class="icon-twitter-1"></i></a></li>
                                 <li><a href="#"><i class="icon-linkedin-1"></i></a></li>
                             </ul>
-                        </div>
+                        </div> -->
                         <div class="text">
                             <p>Copyright © 2023 Kalifo Technologies. All rights reserved.</p>
                         </div>
@@ -208,7 +208,7 @@
                                             </span> -->
                                         </div>
                                         <div class="elisc_tm_button">
-                                            <a class="anchor" href="#portfolio">Got a project?</a>
+                                            <a class="anchor" href="https://drive.google.com/file/d/1TXrWo_Mx0BwltlEIUlvZhHtDGnktD-kn/view?usp=share_link">Get My CV</a>
                                         </div>
                                     </div>
                                     <div class="right">
