--- a/index.html
+++ b/index.html
@@ -1079,9 +1079,9 @@
             </div>
 
         </div>
-
+<!-- 
         <div class="mouse-cursor cursor-outer"></div>
-        <div class="mouse-cursor cursor-inner"></div>
+        <div class="mouse-cursor cursor-inner"></div> -->
 
     </div>
 
