--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="description" content="Name of your web site">
-    <meta name="author" content="Marketify">
+    <meta name="description" content="Personal website for Dr. Kavitha S Murugesan">
+    <meta name="author" content="Swathi P">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Dr. S Kavitha</title>
 
